tests/negative/semantics/break_outside_loop.stream
// EXPECT: Error
print("This is fine");
break; // ERROR: Cannot break at top level